test/tests/stages/5_local_variables/valid/null_then_return.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  int
  identifier(main)
  (
  void
  )
  {
  ;
  return
  const int(0)
  ;
  }
