test/tests/stages/5_local_variables/invalid_parse/return_in_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  const int(10)
  =
  return
  const int(0)
  ;
  }
